[gd_scene load_steps=12 format=3 uid="uid://b71wgveipu153"]

[ext_resource type="Script" path="res://enemy/enemy.gd" id="1_8hquk"]
[ext_resource type="PackedScene" uid="uid://djilktth5kxls" path="res://Assets/Character/Gear/Short_Shield.glb" id="2_krxdd"]
[ext_resource type="PackedScene" uid="uid://brkes6oa2ksbn" path="res://player/rig.tscn" id="2_kxoty"]
[ext_resource type="PackedScene" uid="uid://cgbltld8lc28i" path="res://Assets/Character/Gear/Tall_Shield.glb" id="3_aqv7m"]
[ext_resource type="PackedScene" uid="uid://btnw4i1q6w0nr" path="res://player/health_component.tscn" id="3_jqpg3"]
[ext_resource type="PackedScene" uid="uid://be03ygq05v3r8" path="res://player/area_attack.tscn" id="4_512mf"]
[ext_resource type="PackedScene" uid="uid://bqguar07kl1bl" path="res://Assets/Character/Gear/Broken_Sword.glb" id="4_gjdrt"]
[ext_resource type="PackedScene" uid="uid://ygbnxehrsf3g" path="res://Assets/Character/Gear/Longsword.glb" id="5_tdpio"]
[ext_resource type="PackedScene" uid="uid://pbnkbbm8bjc6" path="res://Assets/Character/Gear/Battleaxe.glb" id="6_gauir"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yqm2y"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kpb34"]

[node name="Enemy" type="CharacterBody3D"]
collision_layer = 9
script = ExtResource("1_8hquk")
shields = Array[PackedScene]([ExtResource("2_krxdd"), ExtResource("3_aqv7m")])
weapons = Array[PackedScene]([ExtResource("4_gjdrt"), ExtResource("5_tdpio"), ExtResource("6_gauir")])

[node name="HealthComponent" parent="." node_paths=PackedStringArray("body") instance=ExtResource("3_jqpg3")]
body = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_yqm2y")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true

[node name="Rig" parent="." instance=ExtResource("2_kxoty")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="Skeleton3D" parent="Rig/CharacterRig/GameRig" index="0"]
bones/0/position = Vector3(4.12628e-15, 0.907005, -0.0481736)
bones/2/rotation = Quaternion(0.00450924, -0.000313152, 0.00321218, 0.999985)
bones/3/rotation = Quaternion(-0.0906469, -0.000304071, 0.00852365, 0.995847)
bones/4/rotation = Quaternion(0.27181, 1.52693e-08, 8.94167e-08, 0.962351)
bones/6/rotation = Quaternion(-0.162797, -1.17686e-07, -1.90109e-08, 0.98666)
bones/7/position = Vector3(-2.58211e-08, 0.907005, -0.0481735)
bones/8/position = Vector3(-3.64547e-08, 0.907005, -0.0481735)
bones/9/position = Vector3(0.131144, 0.973209, -0.0351291)
bones/9/rotation = Quaternion(0.993946, 0.0204057, -0.0311719, 0.103361)
bones/11/rotation = Quaternion(0.401613, -0.000697054, 0.000305825, 0.915809)
bones/13/rotation = Quaternion(-0.743646, 0.0118561, 0.0243711, 0.668024)
bones/15/position = Vector3(-0.131144, 0.973209, -0.0351291)
bones/15/rotation = Quaternion(0.975152, -0.00540818, 0.0275817, 0.219748)
bones/17/rotation = Quaternion(0.42718, 0.00319067, -0.00150755, 0.90416)
bones/19/rotation = Quaternion(-0.680789, -0.0281529, -0.00126043, 0.731938)
bones/21/position = Vector3(0.0251286, 1.43673, 0.0460319)
bones/21/rotation = Quaternion(-0.47599, -0.26507, -0.412716, 0.729957)
bones/22/position = Vector3(0.190772, 1.47516, -0.0133455)
bones/22/rotation = Quaternion(0.0282507, -0.162976, 0.975307, -0.146344)
bones/23/rotation = Quaternion(3.49041e-08, -0.0335203, 6.14225e-08, 0.999438)
bones/24/rotation = Quaternion(0.338943, -0.0335211, -0.0211404, 0.939972)
bones/46/position = Vector3(-0.0113635, 1.43673, 0.0460319)
bones/46/rotation = Quaternion(-0.480982, 0.25366, 0.405347, 0.734852)
bones/47/position = Vector3(-0.175074, 1.47555, -0.018237)
bones/47/rotation = Quaternion(-0.0268982, -0.145041, 0.975743, 0.16176)
bones/48/rotation = Quaternion(-4.24844e-08, 0.0462966, -4.65191e-08, 0.998928)
bones/49/rotation = Quaternion(0.377759, 0.0462974, 0.0284581, 0.924308)
bones/71/position = Vector3(0.127191, 1.3571, -0.0249249)
bones/71/rotation = Quaternion(2.00633e-08, 0.60202, 0.798481, -4.59972e-08)
bones/72/position = Vector3(-0.113426, 1.3571, -0.0249249)
bones/72/rotation = Quaternion(2.00633e-08, 0.60202, 0.798481, -4.59972e-08)

[node name="Knight_02" parent="Rig/CharacterRig/GameRig/Skeleton3D" index="1"]
visible = false

[node name="Villager_02" parent="Rig/CharacterRig/GameRig/Skeleton3D" index="3"]
visible = true

[node name="RightHandBone" parent="Rig" index="2"]
transform = Transform3D(-0.962342, -0.270805, -0.0237106, 0.226519, -0.847063, 0.480804, -0.150288, 0.457327, 0.876507, -0.348891, 1.00499, 0.0153864)

[node name="LeftHandBone" parent="Rig" index="3"]
transform = Transform3D(-0.970513, 0.239109, 0.0305206, -0.212205, -0.907563, 0.36235, 0.11434, 0.345189, 0.931542, 0.347583, 0.988899, -0.0173505)

[node name="PlayerDetector" type="ShapeCast3D" parent="Rig"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_kpb34")
target_position = Vector3(0, 0, 1)
collision_mask = 4

[node name="AreaAttack" parent="Rig" instance=ExtResource("4_512mf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1)
collision_mask = 4

[connection signal="defeat" from="HealthComponent" to="." method="_on_health_component_defeat"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="heavy_attack" from="Rig" to="." method="_on_rig_heavy_attack"]

[editable path="Rig"]
[editable path="Rig/CharacterRig"]
